--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body {
 /* ------------------HEADER------------------ */
 
 .header {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .nav {
@@ -75,6 +75,8 @@ body {
 
 .header-link {
   display: block;
+  position: relative;
+
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -83,6 +85,25 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+}
+
+.header-link::after {
+  content: '';
+
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 0;
+  
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196f3;
+  opacity: 0;  
+}
+
+.header-link::after {
+  opacity: 1;
 }
 
 /* .header-e-mail-div {
@@ -105,7 +126,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  color: var(--other-text-color);
+  color: var(--other-text-color);  
 }
 
 .header-envelope {
@@ -139,7 +160,8 @@ body {
 .header-e-mail:focus,
 .header-tel:hover,
 .header-tel:focus {
-  color: #2196f3;
+  color: #2196f3;  
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-e-mail:hover > svg,
@@ -147,6 +169,7 @@ body {
 .header-tel:hover > svg,
 .header-tel:focus > svg {
   fill: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------------HERO------------------ */
@@ -202,6 +225,66 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: transparent;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {  
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;  
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scaleX(0);
+}
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  min-width: 528px;
+  min-height : 581px;
+
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;  
+}
+
+.modal-div {
+  position: relative;
+}
+
+.modal-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  width: 30px;
+  height: 30px;
+  transform: translate(-8px, 8px);
+
+  font-family: inherit;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: #FFFFFF;
+}
+
+.modal-icon {
+  fill: #000;
 }
 
 .hero-under-top-section {
@@ -264,7 +347,39 @@ margin-right: 30px;
 
 .hero-midle-list {
   display: flex;
-  gap: 30px;
+  gap: 30px;  
+}
+
+.hero-midle-container {
+  position: relative;
+}
+
+.hero-midle-img {
+  display: block;
+}
+
+.hero-midle-div {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  left: 0;
+  bottom: 0;
+
+  background-color: rgba(47, 48, 58, 0.8);;
+}
+
+.hero-midle-text {
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;  
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  
+  color: #FFFFFF;
 }
 
 /* .hero-midle-item:not(:last-child) {
@@ -356,6 +471,7 @@ margin-right: 30px;
 .social-link:hover,
 .social-link:focus {
   background-color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-down-icon {
@@ -367,6 +483,7 @@ margin-right: 30px;
 .social-link:hover > svg,
 .social-link:focus > svg {
   fill: #ffffff;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------CLAENTS------------- */
@@ -413,11 +530,13 @@ margin-right: 30px;
 .claents-link:hover,
 .claents-link:focus {
   border: 1px solid #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .claents-link:hover > svg,
 .claents-link:focus > svg {
   fill: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ------------FOOTER---------------- */
@@ -485,6 +604,7 @@ margin-right: 30px;
 .footer-link:hover,
 .footer-link:focus {
   background-color: #2196f3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon {
@@ -542,6 +662,7 @@ margin-right: 30px;
   background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-btn {
@@ -567,15 +688,57 @@ margin-right: 30px;
 }
 
 .examples-item {
+  position: relative;
   width: 370px;
   gap: 30px;
   border: 1px solid #eeeeee;
+  overflow: hidden;
+}
+
+.hero-down-img {
+  position: relative;
+}
+
+.card-div {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  width: 100%;
+  height: 294px;
+  right: 0;
+  top: 0;
+  transform: translate(0%, 100%);
+  background: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+}
+
+.card-text {
+  padding-left: 24px;
+  padding-right: 24px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;  
+  letter-spacing: 0.03em;
+  
+  color: #FFFFFF;
 }
 
 .examples-item:hover,
 .examples-item:focus {
   border: 1px solid #EEEEEE;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.examples-item:hover .card-div,
+.examples-item:focus .card-div {
+transform: translate(0, 0);
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+opacity: 1;
 }
 
 /* .examples-item:not(:nth-child(3n)) {
