--- a/css/styles.css
+++ b/css/styles.css
@@ -87,22 +87,26 @@ body {
   color: var(--main-text-color);
 }
 
-.header-link::after {
-  content: '';
+.link.current {
+  position: relative;
+}
 
+.current::after {
+  content: '';
+  
   position: absolute;
-  display: block;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   
   width: 100%;
   height: 4px;
   border-radius: 2px;
   background-color: #2196f3;
-  opacity: 0;  
 }
 
-.header-link::after {
+/* .header-link:hover:after, */
+.header-link:focus:after,
+.header-link:visited:after {
   opacity: 1;
 }
 
