--- a/css/styles.css
+++ b/css/styles.css
@@ -85,10 +85,12 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link.current {
   position: relative;
+  color: #2196f3;
 }
 
 .current::after {
@@ -104,11 +106,7 @@ body {
   background-color: #2196f3;
 }
 
-/* .header-link:hover:after, */
-.header-link:focus:after,
-.header-link:visited:after {
-  opacity: 1;
-}
+
 
 /* .header-e-mail-div {
   display: flex;
@@ -131,6 +129,7 @@ body {
   letter-spacing: 0.02em;
 
   color: var(--other-text-color);  
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-envelope {
@@ -141,6 +140,7 @@ body {
   height: 12px;
 
   fill: #757575;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-smartphone {
@@ -151,6 +151,7 @@ body {
   height: 16px;
 
   fill: #757575;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-e-mail {
@@ -165,15 +166,13 @@ body {
 .header-tel:hover,
 .header-tel:focus {
   color: #2196f3;  
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-e-mail:hover > svg,
 .header-e-mail:focus > svg,
 .header-tel:hover > svg,
 .header-tel:focus > svg {
-  fill: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2196f3;  
 }
 
 /* ------------------HERO------------------ */
@@ -238,6 +237,9 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 2;
 }
 
 .backdrop.is-hidden {  
@@ -247,15 +249,15 @@ body {
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scaleX(0);
+  transform: translate(-50%, -50%) scale(0.3);
 }
 
 .modal{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scaleX(1);
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   min-width: 528px;
   min-height : 581px;
@@ -263,10 +265,12 @@ body {
   background: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;  
+  z-index: 1;
+  visibility: visible;
 }
 
 .modal-div {
-  position: relative;
+  position: relative;  
 }
 
 .modal-button {
@@ -470,24 +474,24 @@ margin-right: 30px;
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
-  background-color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #2196f3;  
 }
 
 .hero-down-icon {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover > svg,
 .social-link:focus > svg {
-  fill: #ffffff;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #ffffff;  
 }
 
 /* ---------CLAENTS------------- */
@@ -521,6 +525,7 @@ margin-right: 30px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .claents-icon {
@@ -529,18 +534,17 @@ margin-right: 30px;
   height: 60px;
 
   fill: #afb1b8;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .claents-link:hover,
 .claents-link:focus {
-  border: 1px solid #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid #2196f3;  
 }
 
 .claents-link:hover > svg,
 .claents-link:focus > svg {
-  fill: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2196f3;  
 }
 
 /* ------------FOOTER---------------- */
@@ -603,18 +607,18 @@ margin-right: 30px;
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
 .footer-link:focus {
   background-color: #2196f3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon {
   width: 20px;
   height: 20px;
-  fill: #ffffff;
+  fill: #ffffff;  
 }
 
 .footer-address {
@@ -665,8 +669,7 @@ margin-right: 30px;
   color: var(--title-text-color);
   background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    0px 2px 2px rgba(0, 0, 0, 0.12); 
 }
 
 .portfolio-btn {
@@ -683,6 +686,7 @@ margin-right: 30px;
   background: #f5f4fa;
   border-radius: 4px;
   border: transparent;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .examples-list {
@@ -695,12 +699,15 @@ margin-right: 30px;
   position: relative;
   width: 370px;
   gap: 30px;
-  border: 1px solid #eeeeee;
-  overflow: hidden;
+  border: 1px solid #eeeeee;  
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-down-img {
+.good-card-div {
   position: relative;
+width: 370px;
+height: 294px;
+overflow: hidden;
 }
 
 .card-div {
@@ -717,6 +724,7 @@ margin-right: 30px;
   background: rgba(33, 150, 243, 0.9);
 
   opacity: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-text {
@@ -735,13 +743,11 @@ margin-right: 30px;
 .examples-item:focus {
   border: 1px solid #EEEEEE;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .examples-item:hover .card-div,
 .examples-item:focus .card-div {
 transform: translate(0, 0);
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 opacity: 1;
 }
 
